# gameboy

./: .gitignore  CLAUDE.md  Cargo.toml  PROJECT.md  logs.txt
docs/: INTERRUPT_IMPLEMENTATION_GUIDE.md  INTERRUPT_REFERENCE.md  TIMER_IMPLEMENTATION_GUIDE.md  TIMER_REFERENCE.md
src/: main.rs
src/args/: mod.rs
src/cartridge/: mod.rs
src/cpu/: instructions.rs  mod.rs  registers.rs
src/gameboy/: mod.rs
src/memory/: mod.rs
src/timer/: mod.rs
