[package]
name = "gameboy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }

[lints.clippy]
must_use_candidate = { level = "allow", priority = 1 }
verbose_bit_mask = { level = "allow", priority = 1 }
unused_self = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
pedantic = "warn"